--- a/ImgurAPIDemo/ImgurAPIDemo/View/TopWeeklyGalleriesViewController.xib
+++ b/ImgurAPIDemo/ImgurAPIDemo/View/TopWeeklyGalleriesViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="ipad11_0rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -11,6 +11,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TopWeeklyGalleriesViewController" customModule="ImgurAPIDemo" customModuleProvider="target">
             <connections>
+                <outlet property="errorMsgLbl" destination="Ybk-p5-UNh" id="QqE-8T-Amz"/>
+                <outlet property="errorMsgReloadBtn" destination="tBM-sn-bhl" id="kU2-sk-UQa"/>
+                <outlet property="errorView" destination="okE-nW-y3U" id="OE3-RH-sjH"/>
                 <outlet property="titleLbl" destination="0gy-fb-BtN" id="2k8-69-0Bh"/>
                 <outlet property="topWeeklyGalleriesCollectionView" destination="8Q0-0g-5yN" id="4hf-Ck-H8G"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -18,11 +21,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="834" height="1194"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="8Q0-0g-5yN">
-                    <rect key="frame" x="18" y="159" width="378" height="703"/>
+                    <rect key="frame" x="18" y="115" width="798" height="1059"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bqS-RP-4Hv">
@@ -37,26 +40,68 @@
                     </connections>
                 </collectionView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLbl" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0gy-fb-BtN" userLabel="titleLbl">
-                    <rect key="frame" x="18" y="108" width="98" height="36"/>
+                    <rect key="frame" x="18" y="64" width="98" height="36"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                     <color key="textColor" name="TopGalleriesTitleColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="okE-nW-y3U">
+                    <rect key="frame" x="297" y="473.5" width="240" height="227"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tBM-sn-bhl">
+                            <rect key="frame" x="81" y="86.5" width="78" height="54"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="tBM-sn-bhl" secondAttribute="height" multiplier="13:9" id="KBt-5g-m4S"/>
+                                <constraint firstAttribute="height" constant="39" id="fAT-mj-EmQ">
+                                    <variation key="heightClass=regular-widthClass=regular" constant="54"/>
+                                </constraint>
+                            </constraints>
+                            <state key="normal" image="ic_reload_table"/>
+                            <connections>
+                                <action selector="reloadTableData:" destination="-1" eventType="touchUpInside" id="gGq-ff-zZl"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="lblErrorMessage" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ybk-p5-UNh">
+                            <rect key="frame" x="29" y="163.5" width="182" height="31.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" name="GalleryInfoTextColor"/>
+                            <nil key="highlightedColor"/>
+                            <variation key="heightClass=regular-widthClass=regular">
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                            </variation>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" name="TopGalleriesBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="tBM-sn-bhl" firstAttribute="centerY" secondItem="okE-nW-y3U" secondAttribute="centerY" id="7bH-GG-pw5"/>
+                        <constraint firstItem="tBM-sn-bhl" firstAttribute="centerX" secondItem="okE-nW-y3U" secondAttribute="centerX" id="EWY-Al-Tht"/>
+                        <constraint firstItem="Ybk-p5-UNh" firstAttribute="top" secondItem="tBM-sn-bhl" secondAttribute="bottom" constant="23" id="FpZ-Va-Gff"/>
+                        <constraint firstAttribute="height" constant="227" id="UBi-64-cA4"/>
+                        <constraint firstItem="Ybk-p5-UNh" firstAttribute="centerX" secondItem="okE-nW-y3U" secondAttribute="centerX" id="YtB-YX-1Pt"/>
+                        <constraint firstAttribute="width" secondItem="okE-nW-y3U" secondAttribute="height" multiplier="240:227" id="hNj-Ky-Zgh"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" name="TopGalleriesBackgroundColor"/>
             <constraints>
                 <constraint firstItem="8Q0-0g-5yN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="18" id="8vf-mj-cyt"/>
+                <constraint firstItem="okE-nW-y3U" firstAttribute="centerY" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="9vz-Ig-cvf"/>
                 <constraint firstItem="0gy-fb-BtN" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="64" id="amM-Py-XHO"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="8Q0-0g-5yN" secondAttribute="trailing" constant="18" id="eIT-23-Hku"/>
+                <constraint firstItem="okE-nW-y3U" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="kh5-IS-tPc"/>
                 <constraint firstItem="0gy-fb-BtN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="18" id="nfo-Kg-nxA"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="8Q0-0g-5yN" secondAttribute="bottom" id="oVb-11-jpd"/>
                 <constraint firstItem="8Q0-0g-5yN" firstAttribute="top" secondItem="0gy-fb-BtN" secondAttribute="bottom" constant="15" id="oY2-gi-IlV"/>
             </constraints>
-            <point key="canvasLocation" x="-12" y="88"/>
+            <point key="canvasLocation" x="-13.043478260869566" y="87.723214285714278"/>
         </view>
     </objects>
     <resources>
+        <image name="ic_reload_table" width="39" height="27"/>
+        <namedColor name="GalleryInfoTextColor">
+            <color red="0.68599998950958252" green="0.68599998950958252" blue="0.68599998950958252" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="TopGalleriesBackgroundColor">
             <color red="0.17299999296665192" green="0.18000000715255737" blue="0.20000000298023224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
